--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/treardon17/IoT-Hub#readme",
   "dependencies": {
-    "arp-a": "^0.5.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
@@ -26,6 +25,7 @@
     "express": "^4.16.3",
     "libnmap": "^0.4.11",
     "node-lifx": "^0.8.0",
+    "ping": "^0.2.2",
     "portscanner": "^2.1.1",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
