--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "debug": "^3.1.0",
     "evilscan": "^1.6.1",
     "express": "^4.16.3",
+    "fs-extra": "^5.0.0",
     "libnmap": "^0.4.11",
+    "mkdirp": "^0.5.1",
     "node-lifx": "^0.8.0",
+    "path": "^0.12.7",
     "ping": "^0.2.2",
     "portscanner": "^2.1.1",
     "socket.io": "^2.1.0",
