--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "circular-json": "^0.5.3",
     "debug": "^3.1.0",
     "evilscan": "^1.6.1",
     "express": "^4.16.3",
