--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "evilscan": "^1.6.1",
     "express": "^4.16.3",
     "fs-extra": "^5.0.0",
+    "hap-nodejs": "^0.4.41",
     "is-json": "^2.0.1",
     "libnmap": "^0.4.11",
     "mkdirp": "^0.5.1",
