Setup deviceMap proxy in service so can react to changes

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hap-nodejs": "^0.4.41",
     "is-json": "^2.0.1",
     "libnmap": "^0.4.11",
+    "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
     "node-lifx": "^0.8.0",
     "path": "^0.12.7",
