--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
     "wake_on_lan": "0.0.4",
-    "xml2json": "^0.11.2"
+    "xml2json": "^0.11.2",
+    "yamaha-nodejs": "^0.8.0"
   }
 }
