--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ping": "^0.2.2",
     "portscanner": "^2.1.1",
     "qrcode-terminal": "^0.12.0",
+    "shelljs": "^0.8.2",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
     "wake_on_lan": "0.0.4",
