Express server sending over https

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.16.3",
     "fs-extra": "^5.0.0",
     "hap-nodejs": "^0.4.46",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "is-json": "^2.0.1",
     "libnmap": "^0.4.11",
     "lodash": "^4.17.10",
