--- a/package.json
+++ b/package.json
@@ -4,44 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "DEBUG=* node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://treardon17@github.com/treardon17/IoT-Hub.git"
   },
-  "author": "Tyler Reardon",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/treardon17/IoT-Hub/issues"
   },
-  "homepage": "https://github.com/treardon17/IoT-Hub#readme",
-  "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "debug": "^3.1.0",
-    "evilscan": "^1.6.1",
-    "express": "^4.16.3",
-    "fs-extra": "^5.0.0",
-    "hap-nodejs": "^0.4.46",
-    "http": "0.0.0",
-    "https": "^1.0.0",
-    "is-json": "^2.0.1",
-    "libnmap": "^0.4.11",
-    "lodash": "^4.17.10",
-    "mkdirp": "^0.5.1",
-    "node-lifx": "^0.8.0",
-    "path": "^0.12.7",
-    "ping": "^0.2.2",
-    "portscanner": "^2.2.0",
-    "qrcode-terminal": "^0.12.0",
-    "shelljs": "^0.8.2",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "wake_on_lan": "0.0.4",
-    "xml2json": "^0.11.2",
-    "yamaha-nodejs": "^0.8.0"
-  }
+  "homepage": "https://github.com/treardon17/IoT-Hub#readme"
 }
